[package]
name = "xtoml"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Toml with extended functions"
repository = "https://github.com/oovm/xToml"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
toml = "0.5.9"
num = "0.4.0"
indexmap = "1.9.2"
peginator = "0.6.0"


[dev-dependencies]

[features]
default = []
